objects/NPC_Request__c.object
<CustomObject>
    <fields>
        <fullName>Below_Current_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Below Current Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Below_Floor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Below Floor Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Below_Reference_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Below Reference Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Workflows__c</fullName>
        <formula>$Setup.Global_On_Off_Switch__c.Workflow_Rules__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bypass Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Error_Responses__c</fullName>
        <label>Count of Error Responses</label>
        <summaryFilterItems>
            <field>NPC_Response__c.NPC_Message_Type__c</field>
            <operation>equals</operation>
            <value>E</value>
        </summaryFilterItems>
        <summaryForeignKey>NPC_Response__c.NPC_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_NPC_Responses__c</fullName>
        <label>Count of NPC Responses</label>
        <summaryForeignKey>NPC_Response__c.NPC_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <formula>Pricing_Request_Item__r.Pricing_Request__r.Dist_Channel_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Pricing_Request_Item__r.Pricing_Request__r.Division_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>F_Approval_Status__c</fullName>
        <formula>TEXT(Pricing_Request_Item__r.Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner1__c</fullName>
        <label>Partner1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2__c</fullName>
        <label>Partner 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Code_1__c</fullName>
        <label>Partner  Code 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Code_2__c</fullName>
        <label>Partner Code 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per__c</fullName>
        <label>Per</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Date__c</fullName>
        <formula>Pricing_Request_Item__r.New_Valid_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Item__c</fullName>
        <label>Pricing Request Item</label>
        <referenceTo>Pricing_Request_Item__c</referenceTo>
        <relationshipLabel>NPC Request</relationshipLabel>
        <relationshipName>NPC_Request</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <formula>Pricing_Request_Item__r.Pricing_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Error_Code__c</fullName>
        <label>Response Error Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Error_Message__c</fullName>
        <label>Response Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cluster_Id__c</fullName>
        <formula>Pricing_Request_Item__r.SAP_Cluster__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Cluster Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Document_Type__c</fullName>
        <label>Sales Document Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <formula>Pricing_Request_Item__r.Pricing_Request__r.Sales_Org_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Current_Net_Price__c</fullName>
        <label>Stamp Current Net Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Floor_Net_Price__c</fullName>
        <label>Stamp Floor Net Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_New_Net_Price__c</fullName>
        <label>Stamp New Net Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp_Reference_Net_Price__c</fullName>
        <label>Stamp Reference Net Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <label>UoM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSynchronous</label>
        <type>Checkbox</type>
    </fields>
    <label>NPC Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Material_Number__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NPC Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPC Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>